updated patch that updates README from nemobis
- specified that the Ubuntu packages are also Debian packages

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ comments) from large XML datasets.
 use:
 
 To use, first make sure you have libexpat and libpcrecpp installed (e.g.
-via packages libexpat1 and libpcre3-dev on Ubuntu), then:
+via packages libexpat1 and libpcre3-dev on Debian or Ubuntu), then:
 
     % make
     % ./wikiq -h  # prints usage
